--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "13.5.6",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
